--- a/site-jenkins.yml
+++ b/site-jenkins.yml
@@ -2,4 +2,6 @@
 - hosts: jenkins
   become: yes
   roles:
-    #- { role: jenkins }
+    - { role: packages }
+    - { role: nginx }
+    - { role: jenkins-server }
