--- a/roles/prometheus/handlers/main.yml
+++ b/roles/prometheus/handlers/main.yml
@@ -1,2 +1,11 @@
 ---
-# handlers file for prometheus
+- name: "restart prometheus"
+  systemd:
+    daemon_reload: true
+    name: prometheus
+    state: restarted
+
+- name: "reload prometheus"
+  systemd:
+    name: prometheus
+    state: reloaded
