--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -1,1 +1,10 @@
 ---
+- import_tasks: preflight.yml
+- import_tasks: install.yml
+
+- name: "Ensure prometheus service is started and enabled"
+  systemd:
+    daemon_reload: true
+    name: prometheus
+    state: started
+    enabled: true
