Add config files

--- a/roles/prometheus/vars/main.yml
+++ b/roles/prometheus/vars/main.yml
@@ -2,6 +2,7 @@
 prometheus_version: 2.8.0
 
 prometheus_config_dir: /etc/prometheus
+prometheus_config_file: 'prometheus.yml.j2'
 prometheus_db_dir: /var/lib/prometheus
 
 prometheus_web_listen_address: "0.0.0.0:9090"
@@ -11,3 +12,37 @@ prometheus_storage_retention: "30d"
 prometheus_storage_retention_size: "0"
 
 prometheus_config_flags_extra: {}
+
+prometheus_alert_rules_files:
+  - prometheus/rules/*.rules
+
+prometheus_targets: {}
+
+prometheus_static_targets_files:
+  - prometheus/targets/*.yml
+  - prometheus/targets/*.json
+
+prometheus_global:
+  scrape_interval: 15s
+  scrape_timeout: 10s
+  evaluation_interval: 15s
+
+prometheus_external_labels:
+  environment: "{{ ansible_fqdn | default(ansible_host) | default(inventory_hostname) }}"
+
+prometheus_alertmanager_config: []
+prometheus_alert_relabel_configs: []
+
+prometheus_remote_write: []
+prometheus_remote_read: []
+
+prometheus_scrape_configs:
+  - job_name: "prometheus"
+    metrics_path: "{{ prometheus_metrics_path }}"
+    static_configs:
+      - targets:
+          - "{{ ansible_fqdn | default(ansible_host) | default('localhost') }}:9090"
+  - job_name: "node"
+    file_sd_configs:
+      - files:
+          - "{{ prometheus_config_dir }}/file_sd/node.yml"
