--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 - import_tasks: preflight.yml
 - import_tasks: install.yml
+- import_tasks: configure.yml
 
 - name: "Ensure prometheus service is started and enabled"
   systemd:
