Create prometheus site

--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -2,10 +2,4 @@
 - import_tasks: preflight.yml
 - import_tasks: install.yml
 - import_tasks: configure.yml
-
-- name: "Ensure prometheus service is started and enabled"
-  systemd:
-    daemon_reload: true
-    name: prometheus
-    state: started
-    enabled: true
+- import_tasks: prometheus_site.yml
