--- a/roles/prometheus/tasks/configure.yml
+++ b/roles/prometheus/tasks/configure.yml
@@ -59,3 +59,10 @@
     group: prometheus
     mode: 0640
   with_fileglob: "{{ prometheus_static_targets_files }}"
+  
+- name: "Ensure prometheus service is started and enabled"
+  systemd:
+    daemon_reload: true
+    name: prometheus
+    state: started
+    enabled: true
