--- a/roles/grafana/tasks/main.yml
+++ b/roles/grafana/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
-import_tasks: install.yml
-import_tasks: configure.yml
-import_tasks: grafana_site.yml
+- import_tasks: install.yml
+- import_tasks: configure.yml
+- import_tasks: grafana_site.yml
+- import_tasks: db_conf.yml
 
