--- a/site-prometheus.yml
+++ b/site-prometheus.yml
@@ -5,5 +5,6 @@
   roles:
     - { role: packages }
     - { role: nginx }
+    - { role: postgres}
     - { role: prometheus}
-    #- { role: grafana }
+    - { role: grafana }
