--- a/site-prometheus.yml
+++ b/site-prometheus.yml
@@ -3,8 +3,8 @@
   gather_facts: "true"
   become: yes
   roles:
-    #- { role: packages }
-    #- { role: nginx }
-    #- { role: postgres}
-    #- { role: prometheus}
+    - { role: packages }
+    - { role: nginx }
+    - { role: postgres}
+    - { role: prometheus}
     - { role: grafana }
