--- a/roles/prometheus/vars/main.yml
+++ b/roles/prometheus/vars/main.yml
@@ -46,3 +46,14 @@ prometheus_scrape_configs:
     file_sd_configs:
       - files:
           - "{{ prometheus_config_dir }}/file_sd/node.yml"
+
+  - job_name: "jenkins"
+    metrics_path: "{{ prometheus_metrics_path }}"
+    static_configs:
+      - targets:
+        - 192.168.0.100:9100
+    relabel_configs:
+    - source_labels: [__address__]
+      regex: '.*'
+      target_label: 'instance'
+      replacement: 'jenkins'
